spirit/core/static/spirit/stylesheets/reed-base.css
@import url("/static/spirit/stylesheets/styles.all.min.css");

/* the code below overrides the original spirit style sheet imported above^,
which is mostly just keeping Spirit's formatting/page layouts for us. If you're having trouble
changing things / overridng the original spirit style sheet, try using the !important attribute,
but be careful as it may also override code in this style sheet :) -corb */

/* styling across all pages */
* {
  box-sizing: border-box;
}

html {
  font-family: "Raleway";
  font-size: 16px;
  line-height: 24px;
  color: black;
  position: relative;
  min-height: 100%;
}

html, body {
  height: 100%;
  width: 100%;
  max-width: 100% !important;
  margin: 0;
  background-image: url('../images/Studyingbooks.jpg');
  background-attachment: fixed;
}

body

/* governs styling of username in forum posts */
.username {
  color: #4d5a77;
  font-size: 17px;
  text-decoration: underline;
}

/* governs header/banner across all pages */
.header {
  padding: 0;
  margin: 0;
}

.header-banner {
    background-color: #85070A;
    background-image: url("../images/griffin.png");
    background-repeat: no-repeat;
    background-size: 140px 150px;
    text-align: left;
    padding-left: 40px; /*4.25rem; /*85px; */
    margin: 0;
    width: 100%;
    position: absolute;
}

#headertext {
  font-family: times, serif;
  font-size: 1.875rem /* 1rem = 16px, 1.875rem = 30px */;
  font-weight: lighter;
  color: white;
  text-align: left;
  margin-bottom: 0;
}

.header-div {
    white-space: nowrap;
    overflow: hidden;
    width:100%;
}

.forumtopnav {
    overflow: hidden;
    width: 100%;
}

.forumtopnav a {
    overflow: hidden;
    display: inline-block;
    padding: 4px;
    padding-left: 0;
    padding-top: 2px;
    color: #f2f2f2;
    text-decoration: none;
    font-size: 12px;
    font-family: 'Myriad', sans-serif;
    letter-spacing: 1px;
}

.forumtopnav a:hover {
  color: #787562;
  transition-delay: .15s; /* delays for .15 seconds */
  -webkit-transition-delay: .15s; /* ^for Safari & Chrome */
}
.forumtopnav a.active {
    background-color: #4CAF50;
    color: black;
}

/* governs styling of the rows of forum posts on forum home page */
.row-title a{
  color: black !important;
}
.row-title a:hover, .row-info a:hover{
  color: #787562 !important;
}
.row-info, .row-info a {
    color: black;
}

.dropdown-button {
  color: black;
  width: 250px !important;
  font-size: 17px;
}

.categories {
    width: 220px !important;
}

.dropdown-button:hover {
  color: #4d5a77 !important;
}

/* governs button styling across forum ... could be improved */
.pagecontent {
  width: 100%;
  padding: 3% 3% 3% 3%;
  margin-top: 0px;
  background: rgba(255, 255, 255, 0.3);
}

.header, .pagecontent {
  margin: auto;
  max-width: 68em;
}

.button {
  border-radius: 2px;
  outline: none !important;
  background-color: #4d5a77 !important;
  color: white !important;
  font-weight: lighter;
}

.button:hover {
  color: #4d5a77 !important;
  background-color: #efe8e8 !important;
}

.header-tab-link, .menu-link{
    color: black;
}
.nav li a{
    color: black;
}
.comment-actions li a {
    color: black;
}
.reply-markdown li a {
    color: black;
}
.username {
    color: black;
}
.head-edit-link {
    color: black;
}
/* governs input text on forms throughout the forum.
ie: when one is writing a post or inputting course #'s */
input, textarea, select {
  color: black;
  outline: 1px solid black;
}

/* styling for "admin" page */

.statistics-box {
  box-shadow: 0px 0px 0px 1px black;
  background-color: white;
  color: #4d5a77;
  margin : auto;
}

.messages-info {
  background-color: white;
  box-shadow: 0px 0px 0px 1px black;
}


/*this is the original spirit code for the footer:
.footer {
  position: absolute;
  width: 100%;
  height: 20px;
}*/

.footer-logo {
  position: fixed;
  bottom: 10px;
  color: #4d5a77;
}
.footer-logo:hover {
  color: #4d5a77 !important;
  background-color: #efe8e8 !important;
}

.new-topic {
  width: 200px !important;
  float: right;
}

.course-number-form {
    display: block !important;
    margin: auto !important;
    width: 140px;
}

.course-number-field {
    width: 60px;
}

.course-number-button {
    width: 40px;
}
.course-number-label {
    width: 200px;
    font-size: 17px;
}

.question-title {
    text-align: center;
}

.question-title h1 {
    margin: 0;
    margin-bottom: 5%;
    padding: 0;
}

.create-question {
    width: 144px;
    clear: left;
}

@media screen and (max-width: 780) {
    .username {
        font-size: 100px;
    }
}
@media screen and (max-width: 767) {
  .header-div {
    white-space: nowrap;
      overflow: hidden;
      width:100%;
  }
  .new-topic {
      width: 100px !important;
  }

  .forumtopnav {
      overflow: hidden;
      width: 100%;
  }


}

